discussion/kv_engine/173361/173361_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-51556: Remove Monotonic<> labels in preparation for new style labels

Remove the current std::string labels we assign to Monotonic<> or
AtomicMonotonic<>, so that we can update the way we create labels for
Monotonic<> template so that they are more efficient with respects to
memory usage.

Follow up patches will re-introduce the labels using the newer more
efficient method, after montonic.h in platform repo us been updated.

Change-Id: I82b17b486bdc6604b47a8ea7842b81f0d1605251

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2022-04-06 14:48:20.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-06 15:05:12.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18204/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18204/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19236/ : ABORTED

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6148/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6148/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26614/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26614/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18540/ : ABORTED

Build which was aborted due to a newer patch set being uploaded for the given review. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18540/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45028/ : FAILURE

Compile error at C:\Jenkins\workspace\kv_engine-windows-master\kv_engine\engines\ep\src\monotonic_queue.h(73): error C2977: "Monotonic": too many template arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45028/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37825/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/monotonic_queue.h:36:31:
error: unknown type name "BasicNameLabelPolicy"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/37825/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16431/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/monotonic_queue.h:36:17: error: template parameter missing a default argument [clang-diagnostic-error]
          class LabelPolicy = BasicNameLabelPolicy,
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/monotonic_queue.h:35:30: note: previous default template argument defined here
          const char* Name = nullptr,
                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/monotonic_queue.h:36:31: error: unknown type name "BasicNameLabelPolicy" [clang-diagnostic-error]
          class LabelPolicy = BasicNameLabelPolicy,
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/monotonic_queue.h:73:39: error: template argument for template template parameter must be a class template or type alias template [clang-diagnostic-error]
    Monotonic<T, OrderReversedPolicy, Name, LabelPolicy, Invariant> latestValue;
                                      ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16431/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/monotonic_queue.h:36:17:
error: template parameter missing a default argument [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16431/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17300/ : FAILURE

Compile error at [2022-04-06T14:52:49.469Z] ../kv_engine/engines/ep/src/monotonic_queue.h:36:31:
error: unknown type name "BasicNameLabelPolicy"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17300/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6089/ : FAILURE

Compile error at [2022-04-06T14:49:58.152Z] ../kv_engine/engines/ep/src/monotonic_queue.h:36:31:
error: unknown type name "BasicNameLabelPolicy"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6089/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15367/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
